fix login page excessive white space

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -53,7 +53,7 @@ body {
     margin-bottom: 5px;
 
     .errors {
-      height: 40px;
+      //height: 40px;
 
       .tip {
         font-weight: $avenir-heavy;
@@ -307,7 +307,6 @@ body {
      .title {
       font-size: 21px;
       padding-top: 20px;
-      padding-bottom: 20px;
     }
   }
 }
